@@ -3117,7 +3117,7 @@ Markup errors are handled according to the specification in `PEP
    http://www.w3.org/TR/WCAG10-HTML-TECHS/#link-text
 .. _image: directives.html#image
 .. _replace: directives.html#replace
-.. _meta: directives.html#meta
+.. _meta: directives.html#metadata
 .. _figure: directives.html#figure
 .. _admonition: directives.html#admonitions
 .. _role: directives.html#custom-interpreted-text-roles
